--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,34 @@
 /Menu$8$5.class
 /Menu$8.class
 /Menu$9.class
+/Menu$1$1.class
+/Menu$1$2$1.class
+/Menu$1$2.class
+/Menu$1$3.class
+/Menu$13$1.class
+/Menu$13$2$1.class
+/Menu$13$2$2.class
+/Menu$13$2.class
+/Menu$13$3.class
+/Menu$13$4.class
+/Menu$13$5.class
+/Menu$3$1.class
+/Menu$3$2.class
+/Menu$3$3.class
+/Menu$6$4.class
+/Menu$6$5.class
+/Menu$4$2$1.class
+/Menu$4$2$2.class
+/Menu$4$4.class
+/Menu$4$5.class
+/Menu$3$2$1.class
+/Menu$3$2$2.class
+/Menu$3$4.class
+/Menu$3$5.class
+/Menu$3$1$1.class
+/Menu$3$1$2.class
+/Menu$12$1$1.class
+/Menu$12$1.class
+/Menu$12$2.class
+/Menu$12$3.class
+/Menu$12$4.class
